# mozart

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  go.mod  justfile  main.go  schema
.bruno/: bruno.json  compilation error.bru  execution timeout.bru  failure, wrong answer.bru  pass, bool.bru  pass.bru
.bruno/Haskell/: Compilation Error.bru  Execution Timeout.bru  Runtime Error.bru
.bruno/Haskell/Failure/: Bool.bru  Character.bru  Floating Point.bru  Integer.bru  String.bru
.bruno/Haskell/Pass/: Bool.bru  Character.bru  Floating Point.bru  Integer.bru  String.bru
.bruno/Python/: Create File in tmp.bru  Execution Timeout.bru  Runtime Error.bru  Syntax Error.bru
.bruno/Python/Failure/: Bool.bru  Character.bru  Floating Point.bru  Integer.bru  String.bru
.bruno/Python/Pass/: Bool.bru  Character.bru  Floating Point.bru  Integer.bru  String.bru
.github/workflows/: build.yml  clippy.yml  docker.yml  format.yml  job.yml  release.yml  test.yml
benches/: submit.rs
docker/: haskell
docker/haskell/: image.dockerfile  test.dockerfile
docker/python/: image.dockerfile  test.dockerfile
src/: error.rs  lib.rs  log.rs  main.rs  model.rs  response.rs  runner.rs  timeout.rs
src/runner/: haskell.rs  mod.rs  python.rs
tests/: mod.rs  status.rs
tests/submit/: haskell.rs  mod.rs  python.rs
