[package]
name = "mozart"
version = "0.1.0"
edition = "2021"

[features]
default = []
haskell = []

[dependencies]
axum = "0.7.7"
serde = { version = "1.0.213", features = ["derive"] }
thiserror = "1.0.65"
time = "0.3.36"
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time", "local-time"] }
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }

[dev-dependencies]
tower = { version = "0.5.1", features = ["util"] }
serde_json = "1.0.132"
