[package]
name = "mozart"
version = "0.1.0"
edition = "2021"

[features]
default = []
haskell = []
python = []
ci = []

[dependencies]
axum = "0.7.9"
thiserror = "2.0.6"
serde = { version = "1.0.216", features = ["derive"] }
time = "0.3.37"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["time", "local-time"] }
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
serde_json = "1.0.133"
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "submit"
harness = false
